--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,117 @@
-<section class="mt-5">
-  <h1>Sign up</h1>
+<section class="container-fluid signup-container">
+  <div class="row justify-content-center">
+    <div fxHide.lt-md class="col-md-6">
+      <picture>
+        <img class="app-signup-img" alt="signup page image" src="./../../assets/media/app-signup.jpg" />
+      </picture>
+    </div>
+    <div class="col-md-6 col-sm-12 d-flex flex-column justify-content-center">
+      <mat-card class="signup-card mt-4 mb-4 mat-elevation-z16">
+        <mat-card-header class="p-4">
+          <mat-card-title>{{ 'Signup' | uppercase }}</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="p-4 pt-4 pb-4">
+          <form class="col-lg-9 col-md-12 app-form" autocomplete="off" [formGroup]="signupForm" (ngSubmit)="signup()">
+            <mat-form-field class="w-100">
+              <mat-label>Dalhousie Banner ID</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter Banner ID"
+                [formControl]="bannerId"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="bannerId.hasError('required') && !bannerId.hasError('minlength')"
+                >BannerId is required.</mat-error
+              >
+              <mat-error *ngIf="!bannerId.hasError('required') && bannerId.hasError('maxlength')"
+                >BannerId should not be more than
+                {{ bannerId?.errors?.maxlength?.requiredLength }} characters.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>First Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter First Name"
+                [formControl]="firstName"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="firstName.hasError('required')">Please enter your firstname.</mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Last Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter Last Name"
+                [formControl]="lastName"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="lastName.hasError('required')">Please enter your lastname.</mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Email Address</mat-label>
+              <input
+                matInput
+                type="email"
+                placeholder="Enter email address"
+                [formControl]="email"
+                pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="email.hasError('required') && !email.hasError('pattern')"
+                >Please enter your email address.</mat-error
+              >
+              <mat-error *ngIf="!email.hasError('required') && email.hasError('pattern')"
+                >Please enter a valid email address.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Password</mat-label>
+              <input
+                matInput
+                type="password"
+                placeholder="Create a password"
+                [formControl]="password"
+                pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="password.hasError('required') && !password.hasError('pattern')"
+                >Please enter password.</mat-error
+              >
+              <mat-error *ngIf="!password.hasError('required') && password.hasError('pattern')"
+                >Password should contain one uppercase, one lowercase, one number, one symbol, and should be of 8 to 12
+                characters long.</mat-error
+              >
+            </mat-form-field>
+            <!-- TODO:
+            1) Confirm Password Field
+            2) Material dropdown for role + should be part of formgroup object
+            -->
+            <div class="w-100 d-flex pt-4">
+              <button class="app-primary-btn w-100" [disabled]="!signupForm.valid" type="submit" mat-button>
+                SIGNUP
+              </button>
+              <button routerLink="/login" class="w-100" type="button" mat-button>
+                LOGIN
+              </button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </section>
+
+<!-- 
+  Sign up Image 
+  REF: https://dribbble.com/shots/6413145-DNA-FOOD
+-->
