--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,48 @@
-<h1>Orders</h1>
+<section class="container orders mt-5 mb-5">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>My Orders</h1>
+      <div class="table-responsive d-flex flex-column mt-4">
+        <table mat-table [dataSource]="ordersDataSource" matSort>
+          <!-- TODO: Make it dynamic, iterate through avaiable orders -->
+          <!-- id Column -->
+          <ng-container matColumnDef="Order Id.">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Id.</th>
+            <td mat-cell *matCellDef="let order">{{ order.id }}</td>
+          </ng-container>
+
+          <!-- placed_date Column -->
+          <ng-container matColumnDef="placed_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
+            <td mat-cell *matCellDef="let order">{{ order.placedDate }}</td>
+          </ng-container>
+
+          <!-- pickup_date Column -->
+          <ng-container matColumnDef="pickup_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Pickup Date</th>
+            <td mat-cell *matCellDef="let order">{{ order.pickupDate }}</td>
+          </ng-container>
+
+          <!-- status Column -->
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+            <td mat-cell *matCellDef="let order">{{ order.status }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let row">
+              <button mat-button class="view-order-link" (click)="viewOrderDetails(row)" color="primary">
+                View Order
+              </button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: orderColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+    </div>
+  </div>
+</section>
