orders-design-change

--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,8 +1,13 @@
-<section class="container orders mt-5 mb-5">
+<section class="container-fluid orders mt-5 mb-5">
   <div class="row">
-    <div class="col-md-12">
-      <h1>My Orders</h1>
-      <div class="table-responsive d-flex flex-column mt-4">
+    <div class="col-md-4 mb-4">
+      <picture>
+        <img class="app-orders-img" alt="orders page image" src="./../../assets/media/app-orders.png" />
+      </picture>
+    </div>
+    <div class="col-md-8 mat-elevation-z8">
+      <h1 class="p-4">My Orders</h1>
+      <div class="table-responsive d-flex flex-column mt-2">
         <table mat-table [dataSource]="ordersDataSource" matSort>
           <!-- TODO: Make it dynamic, iterate through avaiable orders -->
           <!-- id Column -->
@@ -46,3 +51,8 @@
     </div>
   </div>
 </section>
+
+<!-- 
+  Orders Image
+  REF: https://dribbble.com/shots/3561365-Orders
+-->
