--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -21,3 +21,7 @@ $img-background-color: #ededed;
 // footer
 $footer-bg: #0e0d3a;
 $sub-footer-bg: #06061d;
+
+// status
+$status-line-blue: #0e0d3a;
+$status-line-orange: #e03700;
