--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 mb-4">
       <picture>
-        <img class="app-orders-img" alt="orders page image" src="./../../assets/media/app-orders.png" />
+        <img class="app-orders-img" alt="orders page image" src="./../../assets/media/app-orders.jpg" />
       </picture>
     </div>
     <div class="col-md-8 mat-elevation-z8">
@@ -54,5 +54,5 @@
 
 <!-- 
   Orders Image
-  REF: https://dribbble.com/shots/3561365-Orders
+  REF: https://dribbble.com/shots/4860242-Spot-Illustration-003
 -->
