merged-forgot-password

--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar" [ngClass]="{ 'active mat-elevation-z8': changedHeaderColor }">
+<mat-toolbar class="navbar active mat-elevation-z8" [ngClass]="{ '': changedHeaderColor }">
   <div class="d-flex align-items-center app-logo" [routerLink]="['/']" fxHide.lt-md>
     <fa-icon [icon]="faCookieBite" class="app-icon"></fa-icon><span class="app-heading pl-1">Food Bank</span>
   </div>
