--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,1 +1,44 @@
-<h1>Forgot Password</h1>
+<section class="container forgot-password mb-4">
+  <div class="card password-card mat-elevation-z2">
+    <div *ngIf="!isResetPwdLinkSent">
+      <h4 class="font-weight-bold">Reset Password</h4>
+      <div class="secondary-txt mt-2 mb-2">
+        Enter your email and we'll send a link on your email to reset your password.
+      </div>
+      <form class="app-form" [formGroup]="resetPasswordForm" (ngSubmit)="resetPasswordLink()">
+        <mat-form-field class="w-100">
+          <input matInput type="text" placeholder="Email Address" [formControl]="email" autocomplete="off" />
+          <mat-error *ngIf="email.hasError('required') && !email.hasError('email')"
+            >Please enter email address.</mat-error
+          >
+          <mat-error *ngIf="!email.hasError('required') && email.hasError('email')"
+            >Please enter a valid email address.</mat-error
+          >
+        </mat-form-field>
+        <div class="pt-2">
+          <button class="app-primary-btn w-100" [disabled]="!resetPasswordForm.valid" type="submit" mat-button>
+            SEND LINK
+          </button>
+        </div>
+        <div class="pt-4">
+          <a class="login-link" [routerLink]="['/login']"><small>Wait, I remember my password.</small></a>
+        </div>
+      </form>
+    </div>
+    <div *ngIf="isResetPwdLinkSent" class="reset-pwd-success">
+      <picture>
+        <img class="email-img" src="./../../assets/media/app-email-success.jpg" />
+      </picture>
+      <div class="primary-txt">We have sent a password reset link to your registered email ID</div>
+      <div class="secondary-txt text-center mt-2">
+        Click on the 'Reset Password' link sent to your email ID and create a new password
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--
+  Password Reset link sent success
+  REF: https://dribbble.com/shots/3903521-Envelope
+  https://dribbble.com/shots/11008340-Good-news
+-->
