main-container-spacing-signup-validations

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,11 +1,11 @@
 <section class="container-fluid signup-container">
   <div class="row justify-content-center">
-    <div fxHide.lt-md class="col-md-6">
+    <div fxHide.lt-md class="col-md-7">
       <picture>
         <img class="app-signup-img" alt="signup page image" src="./../../assets/media/app-signup.jpg" />
       </picture>
     </div>
-    <div class="col-md-6 col-sm-12 d-flex flex-column justify-content-center">
+    <div class="col-md-5 col-sm-12 d-flex flex-column justify-content-center">
       <mat-card class="signup-card mt-4 mb-4 mat-elevation-z16">
         <mat-card-header class="p-4">
           <mat-card-title>{{ 'Signup' | uppercase }}</mat-card-title>
@@ -23,7 +23,7 @@
                 autocomplete="off"
                 required
               />
-              <mat-error *ngIf="bannerId.hasError('required') && !bannerId.hasError('minlength')"
+              <mat-error *ngIf="bannerId.hasError('required') && !bannerId.hasError('maxlength')"
                 >BannerId is required.</mat-error
               >
               <mat-error *ngIf="!bannerId.hasError('required') && bannerId.hasError('maxlength')"
@@ -62,14 +62,13 @@
                 type="email"
                 placeholder="Enter email address"
                 [formControl]="email"
-                pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
                 autocomplete="off"
                 required
               />
-              <mat-error *ngIf="email.hasError('required') && !email.hasError('pattern')"
+              <mat-error *ngIf="email.hasError('required') && !email.hasError('email')"
                 >Please enter your email address.</mat-error
               >
-              <mat-error *ngIf="!email.hasError('required') && email.hasError('pattern')"
+              <mat-error *ngIf="!email.hasError('required') && email.hasError('email')"
                 >Please enter a valid email address.</mat-error
               >
             </mat-form-field>
@@ -80,7 +79,6 @@
                 type="password"
                 placeholder="Create a password"
                 [formControl]="password"
-                pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$"
                 autocomplete="off"
                 required
               />
