--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -10,28 +10,13 @@
       <div class="table-responsive d-flex flex-column mt-2">
         <table mat-table [dataSource]="ordersDataSource" matSort>
           <!-- TODO: Make it dynamic, iterate through avaiable orders -->
-          <!-- id Column -->
-          <ng-container matColumnDef="Order Id.">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Id.</th>
-            <td mat-cell *matCellDef="let order">{{ order.id }}</td>
-          </ng-container>
 
-          <!-- placed_date Column -->
-          <ng-container matColumnDef="placed_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
-            <td mat-cell *matCellDef="let order">{{ order.placedDate }}</td>
-          </ng-container>
-
-          <!-- pickup_date Column -->
-          <ng-container matColumnDef="pickup_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Pickup Date</th>
-            <td mat-cell *matCellDef="let order">{{ order.pickupDate }}</td>
-          </ng-container>
-
-          <!-- status Column -->
-          <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-            <td mat-cell *matCellDef="let order">{{ order.status }}</td>
+          <ng-container *ngFor="let column of orderClm" [matColumnDef]="column">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+            <td mat-cell *matCellDef="let order">{{ order[column] }}</td>
+            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
+            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
+            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
@@ -46,7 +31,7 @@
           <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: orderColumns"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
   </div>
