--- a/src/app/orders/order-details/order-details.component.html
+++ b/src/app/orders/order-details/order-details.component.html
@@ -16,29 +16,26 @@
             TODO: Make it dynamic,
             unnecessary markup iterations
         -->
-      <ul id="progressbar" *ngIf="order.status == 'PROCESSING'">
-        <li class="step0 active" id="step1">PLACED</li>
-        <li class="step0 active" id="step2">APPROVED</li>
-        <li class="step0 active text-center" id="step3">PROCESSING</li>
-        <li class="step0 text-right" id="step4">RECEIVED</li>
-      </ul>
-      <ul id="progressbar" *ngIf="order.status == 'PENDING'">
-        <li class="step0 active" id="step1">PLACED</li>
-        <li class="step0 active" id="step2">APPROVED</li>
-        <li class="step0 text-center" id="step3">PROCESSING</li>
-        <li class="step0 text-right" id="step4">RECEIVED</li>
-      </ul>
-      <ul id="progressbar" *ngIf="order.status == 'COMPLETED'">
-        <li class="step0 active" id="step1">PLACED</li>
-        <li class="step0 active" id="step2">APPROVED</li>
-        <li class="step0 active text-center" id="step3">PROCESSING</li>
-        <li class="step0 active text-right" id="step4">RECEIVED</li>
-      </ul>
-      <ul id="progressbar" *ngIf="order.status == 'REJECTED'">
-        <li class="step0 active-reject" id="step1">PLACED</li>
-        <li class="step0 active-reject" id="step2">REJECTED</li>
-        <li class="step0 text-center" id="step3">PROCESSING</li>
-        <li class="step0 text-right" id="step4">RECEIVED</li>
+      <ul id="progressbar">
+        <li [ngClass]="{ 'step0 active-reject': order.status == 'REJECTED', 'step0 active': true }" id="step1">
+          PLACED
+        </li>
+        <li [ngClass]="{ 'step0 active-reject': order.status == 'REJECTED', 'step0 active': true }" id="step2">
+          APPROVED
+        </li>
+        <li
+          [ngClass]="{
+            'step0 active text-center': order.status == 'PROCESSING' || order.status == 'COMPLETED',
+            'step0 text-center': order.status == 'PENDING' || true
+          }"
+          class=""
+          id="step3"
+        >
+          PROCESSING
+        </li>
+        <li [ngClass]="{ 'step0 active text-right': order.status == 'COMPLETED', 'step0 text-right': true }" id="step4">
+          RECEIVED
+        </li>
       </ul>
     </div>
   </div>
