--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -31,7 +31,7 @@
           <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: orderColumns"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
   </div>
