mergerd-admin-module

--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,4 +1,15 @@
-.dashboard {
-  display: flex;
-  flex-direction: row;
+// stylelint-disable
+
+:host {
+  min-height: 100vh;
+}
+.admin-nav {
+  min-width: 20%;
+
+  .mat-list-item:not(.mat-accent):hover {
+    background-color: #f5f5f5;
+  }
+  .mat-list-item {
+    cursor: pointer;
+  }
 }
