--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,17 @@
-<div class="dashboard">
-  <div>
-    <a [routerLink]="'orders'">Orders</a>
-    <a [routerLink]="'products'">Products</a>
-    <a [routerLink]="'workers'">Workers</a>
-  </div>
-  <router-outlet></router-outlet>
+<div class="container-fluid mt-5 mb-5">
+  <h1>Admin Dashboard</h1>
+  <mat-divider class="mt-3 mb-3"></mat-divider>
+  <section class="dashboard d-flex" fxLayout.lt-md="column">
+    <mat-list class="admin-nav" fxLayout.lt-md="row">
+      <mat-list-item [routerLink]="'orders'" routerLinkActive="mat-accent">Orders</mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item [routerLink]="'products'" routerLinkActive="mat-accent">Products</mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item [routerLink]="'workers'" routerLinkActive="mat-accent">Employees</mat-list-item>
+    </mat-list>
+    <mat-divider [vertical]="true"></mat-divider>
+    <div class="admin-content pl-4 w-100">
+      <router-outlet></router-outlet>
+    </div>
+  </section>
 </div>
