--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,1 +1,56 @@
-Orders
+<div class="container-fluid mat-elevation-z8">
+  <div class="table-responsive d-flex flex-column mt-2">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order ID</th>
+        <td mat-cell *matCellDef="let order">
+          {{ order.id }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="userid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>User ID</th>
+        <td mat-cell *matCellDef="let order">
+          {{ order.userid }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="placed_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Placed On</th>
+        <td mat-cell *matCellDef="let order">
+          {{ order.placed_date }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="pickup_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Pickup Date</th>
+        <td mat-cell *matCellDef="let order">
+          {{ order.pickup_date }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td mat-cell *matCellDef="let order">
+          <div class="{{ order.status | lowercase }}">
+            <strong>
+              {{ order.status }}
+            </strong>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="view">
+        <th mat-header-cell *matHeaderCellDef>View</th>
+        <td mat-cell *matCellDef="let order">
+          <button mat-raised-button class="app-primary-btn">View</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator [pageSize]="[7]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
