--- a/src/app/products/product-details/product-details.component.html
+++ b/src/app/products/product-details/product-details.component.html
@@ -4,11 +4,11 @@
 <section class="container product-detail mt-5 mb-5">
   <div class="row">
     <div class="col-md-6">
-      <img src="./../../../assets/media/product-item.png" class="product-detail-img" />
+      <img src="{{ product?.imagePath }}" class="product-detail-img" />
     </div>
     <div class="col-md-6">
       <h1 class="product-name">{{ product?.name }}</h1>
-      <h6 class="product-category">{{ product?.categoryName }}</h6>
+      <h6 class="product-category">{{ product?.category.name }}</h6>
       <div class="m-4"></div>
       <h6 class="font-weight-bold">PRODUCT DETAILS</h6>
       <div class="product-description">{{ product?.description }}</div>
@@ -21,3 +21,4 @@
     </div>
   </div>
 </section>
+<app-loader [isLoading]="isLoading" [size]="4"></app-loader>
