--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -110,3 +110,7 @@ td.mat-cell {
 .mat-button.mat-primary .mat-button-focus-overlay {
   background-color: #f5f5f5;
 }
+
+.mat-progress-spinner circle {
+  stroke: #06061d;
+}
