Implemented signup service backend

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,1 +1,158 @@
-<p>checkout works!</p>
+<h3 class="text-center">Checking Out Products</h3>
+<section>
+  <div class="row justify-content-center">
+    <div fxHide.lt-md class="col-md-7">
+      <mat-card class="signup-card mt-4 mb-4 mat-elevation-z16">
+        <mat-card-header class="p-4">
+          <mat-card-title>{{ 'List of products' | uppercase }}</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <ul class="list-group mb-3">
+          <li
+            class="list-group-item d-flex justify-content-between lh-condensed"
+            *ngFor="let product of filteredProducts"
+          >
+            <div>
+              <img src="./../../assets/media/product-item.png" [alt]="product.name" width="150" height="100" />
+            </div>
+            <div>
+              <h6 class="my-0">{{ product.name }}</h6>
+              <p>Product Category : {{ product.categoryName }}</p>
+            </div>
+          </li>
+          <hr />
+        </ul>
+      </mat-card>
+    </div>
+    <div class="col-md-5 col-sm-12 d-flex flex-column justify-content-center">
+      <mat-card class="signup-card mt-4 mb-4 mat-elevation-z16">
+        <mat-card-header class="p-4">
+          <mat-card-title>{{ 'Pickup Details' | uppercase }}</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="p-4 pt-4 pb-4">
+          <form
+            class="col-lg-9 col-md-12 app-form"
+            autocomplete="off"
+            [formGroup]="checkoutForm"
+            (ngSubmit)="checkout()"
+          >
+            <mat-form-field class="w-100">
+              <mat-label>Dalhousie Banner ID</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter Banner ID"
+                [formControl]="bannerId"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="bannerId.hasError('required') && !bannerId.hasError('pattern')"
+                >BannerId is required.</mat-error
+              >
+              <mat-error *ngIf="!bannerId.hasError('required') && bannerId.hasError('pattern')"
+                >Enter valid Banner Id. eg.B00123456</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>First Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter First Name"
+                [formControl]="firstName"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="firstName.hasError('required')">Please enter your firstname.</mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Last Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter Last Name"
+                [formControl]="lastName"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="lastName.hasError('required')">Please enter your lastname.</mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Email Address</mat-label>
+              <input
+                matInput
+                type="email"
+                placeholder="Enter email address"
+                [formControl]="email"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="email.hasError('required') && !email.hasError('email')"
+                >Please enter your email address.</mat-error
+              >
+              <mat-error *ngIf="!email.hasError('required') && email.hasError('email')"
+                >Please enter a valid email address.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Contact Number</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Enter contact number"
+                [formControl]="contactNumber"
+                autocomplete="off"
+                required
+              />
+              <mat-error *ngIf="contactNumber.hasError('required') && !contactNumber.hasError('minlength')"
+                >Please enter your contact number.</mat-error
+              >
+              <mat-error *ngIf="!contactNumber.hasError('required') && contactNumber.hasError('minlength')"
+                >Please enter a valid contact number.</mat-error
+              >
+            </mat-form-field>
+
+            <mat-form-field>
+              <mat-label>Choose a pickup date</mat-label>
+              <input
+                matInput
+                type="date"
+                placeholder="Choose pickup date"
+                min="{{ currentDate | date: 'yyyy-MM-dd' }}"
+                [formControl]="pickupDate"
+                required
+              />
+              <mat-error *ngIf="pickupDate.hasError('required') && !pickupDate.hasError('min')">
+                Please choose a date.
+              </mat-error>
+              <mat-error *ngIf="!pickupDate.hasError('required') && pickupDate.hasError('min')">
+                Please choose future date.
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field>
+              <mat-label>Choose a pickup time</mat-label>
+              <input matInput type="time" placeholder="Choose a pickup time" [formControl]="pickupTime" required />
+              <mat-error
+                *ngIf="pickupTime.hasError('required') && !pickupTime.hasError('min') && !pickupTime.hasError('max')"
+              >
+                Please choose a pickup time.
+              </mat-error>
+              <mat-error
+                *ngIf="(!pickupTime.hasError('required') && pickupTime.hasError('min')) || pickupTime.hasError('min')"
+              >
+                Please select time between 9AM to 6PM.
+              </mat-error>
+            </mat-form-field>
+            <div class="w-100 d-flex pt-4">
+              <button class="app-primary-btn w-100" [disabled]="!checkoutForm.valid" type="submit" mat-button>
+                CHECKOUT
+              </button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</section>
