--- a/src/app/orders/order-details/order-details.component.html
+++ b/src/app/orders/order-details/order-details.component.html
@@ -1,22 +1,22 @@
 <section class="container mt-5 mb-5">
   <h1>Order Details</h1>
   <hr />
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-5">
       <h6 class="font-weight-bold">Order #</h6>
-      <small>{{ order.id }}</small>
+      <small>{{ order.orderId }}</small>
       <h6 class="font-weight-bold">Ordered on</h6>
-      <small>{{ order.placedDate }}</small>
+      <small>{{ order.OrderDate }}</small>
       <h6 class="font-weight-bold">Pickup Date</h6>
-      <small>{{ order.pickupDate }}</small>
+      <small>{{ order.DeliveredDate }}</small>
     </div>
     <div class="col-md-7">
-      <h6 class="font-weight-bold">Status</h6>
-      <!-- 
+      <h6 class="font-weight-bold">Status</h6> -->
+  <!-- 
             TODO: Make it dynamic,
             unnecessary markup iterations
         -->
-      <ul id="progressbar">
+  <!-- <ul id="progressbar">
         <li [ngClass]="{ 'step0 active-reject': order.status == 'REJECTED', 'step0 active': true }" id="step1">
           PLACED
         </li>
@@ -28,7 +28,6 @@
             'step0 active text-center': order.status == 'PROCESSING' || order.status == 'COMPLETED',
             'step0 text-center': order.status == 'PENDING' || true
           }"
-          class=""
           id="step3"
         >
           PROCESSING
@@ -39,8 +38,8 @@
       </ul>
     </div>
   </div>
-  <hr />
-  <div class="row d-flex">
+  <hr /> -->
+  <!-- <div class="row d-flex">
     <div class="col-md-7">
       <h6 class="mb-4 font-weight-bold">Items</h6>
       <div class="card mat-elevation-z2 mb-4 flex-row" *ngFor="let orderItem of order.items">
@@ -63,7 +62,7 @@
       <img class="order-details-img" src="./../../../assets/media/app-order-details.png" alt="order details page" />
       <a class="btn btn-default app-primary-btn mb-4 w-100" routerLink="/orders">BACK TO ORDERS</a>
     </div>
-  </div>
+  </div> -->
 </section>
 
 <!--
