--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -14,9 +14,7 @@
           <ng-container *ngFor="let column of orderClm" [matColumnDef]="column">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
             <td mat-cell *matCellDef="let order">{{ order[column] }}</td>
-            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
-            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
-            <td mat-cell *matCellDef="let order">{{ order.column }}</td>
+            <!-- <td mat-cell *matCellDef="let order">{{ order.OrderDate }}</td> -->
           </ng-container>
 
           <ng-container matColumnDef="actions">
