--- a/src/app/products/product-details/product-details.component.html
+++ b/src/app/products/product-details/product-details.component.html
@@ -4,7 +4,7 @@
 <section class="container product-detail mt-5 mb-5">
   <div class="row">
     <div class="col-md-6">
-      <img src="{{ product?.imagePath }}" class="product-detail-img" />
+      <img src="{{ product?.imagePath | async }}" class="product-detail-img" />
     </div>
     <div class="col-md-6">
       <h1 class="product-name">{{ product?.name }}</h1>
