Product admin functionality edited

--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,6 +1,12 @@
 <div class="container-fluid mat-elevation-z8">
   <div class="table-responsive d-flex flex-column mt-2">
     <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Product ID</th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.id }}
+        </td>
+      </ng-container>
       <!-- Position Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -13,15 +19,15 @@
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
         <td mat-cell *matCellDef="let product">
-          {{ product.category }}
+          {{ product.category.name }}
         </td>
       </ng-container>
 
       <!-- Weight Column -->
-      <ng-container matColumnDef="total">
+      <ng-container matColumnDef="availableQuantity">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
         <td mat-cell *matCellDef="let product">
-          {{ product.quantity }}
+          {{ product.availableQuantity }}
         </td>
       </ng-container>
 
@@ -31,11 +37,6 @@
         <td mat-cell *matCellDef="let product">
           {{ product.limit }}
         </td>
-      </ng-container>
-
-      <ng-container matColumnDef="on_order">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>On Order</th>
-        <td mat-cell *matCellDef="let product">{{ product.on_order }}</td>
       </ng-container>
 
       <ng-container matColumnDef="delete">
@@ -63,7 +64,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-
-    <mat-paginator [pageSize]="[7]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
