Order Details image loading

--- a/src/app/orders/order-details/order-details.component.html
+++ b/src/app/orders/order-details/order-details.component.html
@@ -7,7 +7,7 @@
       <small>{{ order?.orderId }}</small>
       <h6 class="font-weight-bold">Ordered on</h6>
       <small>{{ order?.OrderDate | date }}</small>
-      <h6 class="font-weight-bold">Pickup Date</h6>
+      <h6 class="font-weight-bold">Delivery Date</h6>
       <small>{{ order?.DeliveredDate | date }}</small>
       <h6 class="font-weight-bold">Pickup Slot</h6>
       <small>{{ order?.PickUpSlot | date: 'MMM d, y, h:mm:ss a' }}</small>
@@ -48,7 +48,7 @@
     <div class="col-md-7">
       <h6 class="mb-4 font-weight-bold">Items</h6>
       <div class="card mat-elevation-z2 mb-4 flex-row" *ngFor="let orderItem of order?.item">
-        <img class="order-item-img" src="./../../../assets/media/product-item.png" alt="product image" />
+        <img class="order-item-img" src="{{ orderItem?.imagePath | async }}" alt="product image" />
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
