Implemented email service

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,5 +1,5 @@
-<h3 class="text-center">Checking Out Products</h3>
-<section>
+<section class="products container mt-5 mb-5">
+  <h1>Checking out</h1>
   <div class="row justify-content-center">
     <div fxHide.lt-md class="col-md-7">
       <mat-card class="signup-card mt-4 mb-4 mat-elevation-z16">
