--- a/src/styles/base/_components.scss
+++ b/src/styles/base/_components.scss
@@ -7,6 +7,11 @@
   color: $white !important;
 }
 
+.app-danger-btn {
+  background-color: #ff0038 !important;
+  color: $white !important;
+}
+
 .app-link {
   @extend %app-link;
   &:hover {
