--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,31 +1,31 @@
 <div class="container-fluid mat-elevation-z8">
   <div class="table-responsive d-flex flex-column mt-2">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort class="w-100">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Order ID</th>
         <td mat-cell *matCellDef="let order">
-          {{ order.id }}
+          {{ order.orderId }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="userid">
+      <ng-container matColumnDef="bannerid">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>User ID</th>
         <td mat-cell *matCellDef="let order">
-          {{ order.userid }}
+          {{ order.BannerId }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="placed_date">
+      <ng-container matColumnDef="orderdate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Placed On</th>
         <td mat-cell *matCellDef="let order">
-          {{ order.placed_date }}
+          {{ order.OrderDate }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="pickup_date">
+      <ng-container matColumnDef="pickupdate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Pickup Date</th>
         <td mat-cell *matCellDef="let order">
-          {{ order.pickup_date }}
+          {{ order.PickUpSlot }}
         </td>
       </ng-container>
 
@@ -34,7 +34,7 @@
         <td mat-cell *matCellDef="let order">
           <div class="{{ order.status | lowercase }}">
             <strong>
-              {{ order.status }}
+              {{ order.Status }}
             </strong>
           </div>
         </td>
@@ -43,7 +43,7 @@
       <ng-container matColumnDef="view">
         <th mat-header-cell *matHeaderCellDef>View</th>
         <td mat-cell *matCellDef="let order">
-          <button mat-raised-button class="app-primary-btn">View</button>
+          <button mat-raised-button class="app-primary-btn" (click)="openOrder(order.orderId)">View</button>
         </td>
       </ng-container>
 
@@ -53,4 +53,5 @@
 
     <mat-paginator [pageSize]="[7]" showFirstLastButtons></mat-paginator>
   </div>
+  <app-loader [isLoading]="isLoading" [size]="3"></app-loader>
 </div>
